Fixed alignment for basket icon

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -171,6 +171,11 @@
 }
 
 
+.template-header [data-widget-type="ecombasket"] {
+    .align-self(flex-start);
+}
+
+
 // Add border to default header
 .default-page,
 .ecom-list-page {
