--- a/stylesheets/plugins/blog-post-list.less
+++ b/stylesheets/plugins/blog-post-list.less
@@ -1,3 +1,8 @@
+
+[data-name="blogpost"] {
+    z-index: 1;
+}
+
 .blogpostlist {
     padding: 0 35px;
 
